[gd_scene load_steps=5 format=3 uid="uid://def3gbilknoxq"]

[ext_resource type="Script" path="res://graph/list_vertex.gd" id="1_hry7q"]
[ext_resource type="Texture2D" uid="uid://cvstya0mkgsf5" path="res://graph/sprites/vertex_uni_gelb.png" id="2_k25f1"]
[ext_resource type="PackedScene" uid="uid://bjwpe2viggrq0" path="res://graph/pointer.tscn" id="3_tbfsw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lky5f"]
radius = 50.0

[node name="list_vertex" type="Area2D"]
script = ExtResource("1_hry7q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lky5f")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.32, 0.32)
texture = ExtResource("2_k25f1")

[node name="label_data" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "DATA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="pointer" parent="." instance=ExtResource("3_tbfsw")]
z_index = -1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
